--- a/src/adapters/adapter_config.json
+++ b/src/adapters/adapter_config.json
@@ -3,7 +3,7 @@
   "alpha_pattern": {},
   "arrow_config": null,
   "auto_mapping": null,
-  "base_model_name_or_path": "Qwen/Qwen2.5-1.5B",
+  "base_model_name_or_path": "TinyLlama/TinyLlama-1.1B-Chat-v1.0",
   "bias": "none",
   "corda_config": null,
   "ensure_weight_tying": false,
